force-app/main/default/objects/Charging_Site__c/Charging_Site__c.object-meta.xml
<CustomObject>
    <label>Charging Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charging Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>